# quiz-app

./: .env.example  .gitignore  AGENTS.md  APPLICATION_HEALTH_REPORT.md  ARCHITECTURE.md  BACKEND_ANALYSIS.md  BACKEND_COVERAGE_ANALYSIS.md  BACKEND_DATABASE_FIXES_SUMMARY.md  BACKEND_TESTS_SUMMARY.md  CLAUDE.md  COMPLETE_IMPLEMENTATION_REPORT.md  DOCKER-TESTING.md  DOCKER_UPDATES_GPT52.md  E2E_TEST_RUNNER.md  FINAL_7_STORIES_IMPLEMENTATION_SUMMARY.md  FINAL_STATUS.md  GITHUB_WORKFLOWS_UPDATED.md  GPT52_E2E2_TESTS_SUMMARY.md  INCOMPLETE_FEATURES.md  INTEGRATION_VERIFICATION.md  JACKBOX_STYLE_ARCHITECTURE.md  LICENSE  LOCAL_DEV_SETUP.md  MISSING_FEATURES_IMPLEMENTATION_GUIDE.md  MULTI_PRESENTER_IMPLEMENTATION.md  OLLAMA_REMOVAL_SUMMARY.md  PHASE_4_NETWORK_RESILIENCE_COMPLETE.md  QUICK_START_GUIDE.md  README-DOCKER.md  README.md  README_DETAILED.md  RUNNING_WITHOUT_DOCKER.md  TESTING_STREAMING_TRANSCRIPTION.md  TODO.md  USER_STORIES.md  USER_STORIES_IMPLEMENTATION_STATUS_2025-01-21.md  USER_STORY_VERIFICATION_REPORT.md  docker-compose.test.corp.yml  docker-compose.test.yml  docker-compose.yml  (+1 more)
backend/: .dockerignore  Cargo.toml  Dockerfile  Dockerfile.dev  Dockerfile.test
backend-python/: .gitignore  Dockerfile  Dockerfile.corp  Dockerfile.test  Dockerfile.test.corp  README.md  pyproject.toml  requirements.txt  test_results.txt
backend-python/app/: config.py  database.py  main.py
backend-python/certs/: .keep
backend-python/migrations/: 20251220000004_add_resume_fields.down.sql  20251220000004_add_resume_fields.up.sql  20251223163838_add_join_attempts.down.sql  20251223163838_add_join_attempts.up.sql  20251224000001_add_fake_answers.down.sql  20251224000001_add_fake_answers.up.sql  20251224000002_add_audio_chunks.down.sql  20251224000002_add_audio_chunks.up.sql  20251224000003_add_questions_to_generate.down.sql  20251224000003_add_questions_to_generate.up.sql  20251224000004_add_participant_user_id_index.down.sql  20251224000004_add_participant_user_id_index.up.sql  env.py
backend-python/tests/: conftest.py  test_answer_timeout.py  test_audio_chunks.py  test_auth.py  test_automatic_segment_generation.py  test_chunked_audio_integration.py  test_duplicate_names.py  test_events.py  test_export.py  test_health.py  test_hub_concurrency.py  test_join.py  test_late_join_and_completion.py  test_mega_quiz.py  test_mega_quiz_messages.py  test_openai_batch.py  test_presenter_pause.py  test_presenter_rotation.py  test_question_generation_helper.py  test_scoring.py  (+3 more)
(+419 files in other folders)
