[package]
name = "quiz-backend"
version = "0.1.0"
edition = "2021"
authors = ["Quiz App Team"]
description = "Real-time multiplayer quiz application backend"

[dependencies]
# Web framework
axum = { version = "0.7", features = ["ws", "multipart"] }
axum-extra = { version = "0.9", features = ["typed-header"] }
tower = { version = "0.4", features = ["full"] }
tower-http = { version = "0.5", features = ["cors", "trace", "fs"] }

# Async runtime
tokio = { version = "1", features = ["full"] }
tokio-tungstenite = "0.21"
futures = "0.3"
async-trait = "0.1"

# Database
sqlx = { version = "0.7", features = ["runtime-tokio", "postgres", "uuid", "chrono", "json"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Authentication
jsonwebtoken = "9"
argon2 = "0.5"

# HTTP client (for AI APIs)
reqwest = { version = "0.11", features = ["json", "stream"] }

# Utilities
uuid = { version = "1", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
rand = "0.8"
base64 = "0.21"
thiserror = "1"
anyhow = "1"

# Encryption (for API keys)
aes-gcm = "0.10"

# Environment & Config
dotenvy = "0.15"
config = "0.14"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }

# MinIO/S3
aws-sdk-s3 = "1"
aws-config = "1"

[dev-dependencies]
tokio-test = "0.4"
